Updated website with Nairobi address, FAQs, and styling improvements

--- a/about.html
+++ b/about.html
@@ -52,8 +52,7 @@
                 <h2>Contact Us</h2>
                 <p>Email: <a href="mailto:mwananchihuslerloans@gmail.com">mwananchihuslerloans@gmail.com</a></p>
                 <p>WhatsApp: <a href="https://wa.me/254757396782">+254757396782</a></p>
-                <p>Nairobi Address: [Your Nairobi Address Here]</p>
-            </div>
+                <p class="nairobi-address">Afya House Room 112, 00100</p> </div>
         </section>
     </main>
 
@@ -72,7 +71,7 @@
                 <div class="company-info">
                     <p>Okolea Mwananchi is a registered financial institution</p>
                     <p>Reg. No: 9952654 | PIN: 423657</p>
-                </div>
+                    <p class="nairobi-address">Afya House Room 112, 00100</p> </div>
             </div>
             <div class="secured-by">
                 <img src="sectigo-badge.png" alt="Secured by Sectigo">
