--- a/application.html
+++ b/application.html
@@ -113,6 +113,9 @@
                 <div class="company-info">
                     <p>Okolea Mwananchi is a registered financial institution</p>
                     <p>Reg. No: 9952654 | PIN: 423657</p>
+                    <p class="nairobi-address">Afya House Room 112, 00100</p>
+                    <p>Email: <a href="mailto:mwananchihuslerloans@gmail.com">mwananchihuslerloans@gmail.com</a></p>
+                    <p>WhatsApp: <a href="https://wa.me/254757396782">+254757396782</a></p>
                 </div>
             </div>
             <div class="secured-by">
