--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 </head>
 <body>
     <header>
-        <div class="container">  <a href="index.html" class="logo">Okolea Mwananchi</a> <nav>
+        <div class="container">
+            <a href="index.html" class="logo">Okolea Mwananchi</a>
+            <nav>
                 <ul>
-                    <li><a href="index.html" class="active">Home</a></li> <li><a href="about.html">About Us</a></li>
+                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
                     <li><a href="application.html">Apply Now</a></li>
                     <li><a href="faqs.html">FAQs</a></li>
                 </ul>
@@ -34,7 +37,8 @@
         <section id="how-it-works">
             <div class="container">
                 <h2>How It Works</h2>
-                <div class="steps-container">  <div class="step">
+                <div class="steps-container">
+                    <div class="step">
                         <h3>Step 1: Fill in Your Details</h3>
                         <p>Provide the necessary personal and business details to start your application.</p>
                     </div>
@@ -54,7 +58,8 @@
         <section id="our-solutions">
             <div class="container">
                 <h2>Our Loan Solutions</h2>
-                <div class="solutions-container">  <div class="solution">
+                <div class="solutions-container">
+                    <div class="solution">
                         <h3>Personal Loans</h3>
                         <p>Achieve your personal goals with our flexible personal loan options.</p>
                     </div>
@@ -73,7 +78,8 @@
         <section id="testimonials">
             <div class="container">
                 <h2>Testimonials</h2>
-                <div class="testimonials-container">  <div class="testimonial">
+                <div class="testimonials-container">
+                    <div class="testimonial">
                         <p>"Okolea Mwananchi helped me expand my business..." - John Doe</p>
                     </div>
                     <div class="testimonial">
@@ -105,6 +111,9 @@
                 <div class="company-info">
                     <p>Okolea Mwananchi is a registered financial institution</p>
                     <p>Reg. No: 9952654 | PIN: 423657</p>
+                    <p class="nairobi-address">Afya House Room 112, 00100</p>
+                    <p>Email: <a href="mailto:mwananchihuslerloans@gmail.com">mwananchihuslerloans@gmail.com</a></p>
+                    <p>WhatsApp: <a href="https://wa.me/254757396782">+254757396782</a></p>
                 </div>
             </div>
             <div class="secured-by">
