--- a/terms.html
+++ b/terms.html
@@ -90,6 +90,7 @@
                 <div class="company-info">
                     <p>Okolea Mwananchi is a registered financial institution</p>
                     <p>Reg. No: 9952654 | PIN: 423657</p>
+                    <p class="nairobi-address">Afya House Room 112, 00100</p>
                 </div>
             </div>
             <div class="secured-by">
