--- a/thank_you.html
+++ b/thank_you.html
@@ -31,7 +31,8 @@
                 <p>Thank you for your application! We have received your request and will review it shortly.</p>
                 <p>You will receive an SMS confirmation within 24 hours regarding the status of your loan.</p>
                 <p>If you have any questions, please contact us at <a href="mailto:mwananchihuslerloans@gmail.com">mwananchihuslerloans@gmail.com</a> or WhatsApp <a href="https://wa.me/254757396782">+254757396782</a>.</p>
-                <p><a href="faqs.html" class="cta-button">Frequently Asked Questions</a></p>  </div>
+                <p><a href="faqs.html" class="cta-button">Frequently Asked Questions</a></p>
+            </div>
         </section>
     </main>
 
@@ -50,6 +51,7 @@
                 <div class="company-info">
                     <p>Okolea Mwananchi is a registered financial institution</p>
                     <p>Reg. No: 9952654 | PIN: 423657</p>
+                    <p class="nairobi-address">Afya House Room 112, 00100</p>
                 </div>
             </div>
             <div class="secured-by">
